infrastructure/eksctl/manifests/personal-loan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-loan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-loan
  template:
    metadata:
      labels:
        app: personal-loan
    spec:
      containers:
        - name: personal-loan
          image: 746213696263.dkr.ecr.us-east-1.amazonaws.com/hibicode
          ports:
            - containerPort: 8080
      nodeSelector:
        nodegroup-type: scale-workload
