infrastructure/eksctl/manifests/personal-loan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-loan
  namespace: personalloan
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: personal-loan
